# instrument

./: .gitignore  CMakeLists.txt  Main.qml  RS232.cpp  RS232.h  RS485.cpp  RS485.h  calibrationthread.cpp  calibrationthread.h  dump_handler.h  instrument.cpp  instrument.h  log.cpp  log.h  main.cpp  meter.cpp  meter.h  qtquickcontrols2.conf
ui/: Calibration.qml  EnergyCalc.qml  ErrorCalc.qml  ErrorCalcExample.qml  Header.qml  LoadingPopup.qml  Main.qml  ResultPopup.qml  StatusCard.qml  SystemSettings.qml  TopMessage.qml
